--- a/style.css
+++ b/style.css
@@ -8,6 +8,10 @@
     background-color: whitesmoke;
     order: 2;
 }
+p::first-letter {
+    font-size: 200%;
+    color: #8A2BE2;
+  }
 .collaps{
     margin-top: 100px;
     order: 3;
